--- a/signML/package.json
+++ b/signML/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-camera": "^12.1.2",
+    "expo-media-library": "~14.0.0",
     "expo-status-bar": "~1.2.0",
     "moti": "^0.17.1",
     "react": "17.0.1",
