--- a/signML/package.json
+++ b/signML/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-camera": "^12.1.2",
+    "expo-linking": "^3.0.0",
     "expo-media-library": "~14.0.0",
+    "expo-permissions": "^13.1.1",
     "expo-status-bar": "~1.2.0",
     "moti": "^0.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-flash-message": "^0.2.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
