--- a/signML/package.json
+++ b/signML/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
+    "expo-brightness": "^10.1.1",
     "expo-camera": "^12.1.2",
     "expo-linking": "^3.0.0",
     "expo-media-library": "~14.0.0",
     "expo-permissions": "^13.1.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "moti": "^0.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
