--- a/signML/package.json
+++ b/signML/package.json
@@ -15,6 +15,7 @@
     "expo": "~44.0.0",
     "expo-brightness": "^10.1.1",
     "expo-camera": "^12.1.2",
+    "expo-image-manipulator": "~10.2.0",
     "expo-linking": "^3.0.0",
     "expo-media-library": "~14.0.0",
     "expo-permissions": "^13.1.1",
