--- a/signML/package.json
+++ b/signML/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@sentry/react-native": "^3.4.1",
     "expo": "~44.0.0",
+    "expo-application": "~4.0.1",
     "expo-brightness": "^10.1.1",
     "expo-camera": "^12.1.2",
+    "expo-constants": "~13.0.1",
+    "expo-device": "~4.1.0",
     "expo-image-manipulator": "~10.2.0",
     "expo-linking": "^3.0.0",
     "expo-media-library": "~14.0.0",
     "expo-permissions": "^13.1.1",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
+    "expo-updates": "~0.11.7",
     "moti": "^0.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -29,7 +33,8 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
