--- a/signML/package.json
+++ b/signML/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@sentry/react-native": "^3.4.1",
@@ -31,6 +32,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-flash-message": "^0.2.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
