--- a/signML/package.json
+++ b/signML/package.json
@@ -16,6 +16,7 @@
     "@sentry/react-native": "^3.4.1",
     "expo": "~44.0.0",
     "expo-application": "~4.0.1",
+    "expo-av": "~10.2.0",
     "expo-brightness": "^10.1.1",
     "expo-camera": "^12.1.2",
     "expo-constants": "~13.0.1",
